# OsuManager

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Include/: Logging.hpp
Include/KaedeManager/: Collection.hpp  Manager.hpp
Include/KaedeManager/Core/: Reader.hpp
Include/KaedeManager/File/: Reader.hpp  Writer.hpp
Include/OsuManager/: Collection.hpp
Include/OsuManager/File/: Reader.hpp  Writer.hpp
Source/: Collection.cpp  Collection.hpp  KaedeManager.hpp  Logging.hpp
Source/CollectionManipulator/: Collection.cpp  Collection.hpp  Manipulator.hpp
Source/CollectionManipulator/Core/: Reader.cpp  Reader.hpp
Source/Common/: Logging.hpp
Source/Core/: Reader.cpp  Reader.hpp  Writer.cpp  Writer.hpp
Source/File/: Reader.cpp  Writer.cpp
Source/KaedeApi/: Collection.cpp
Source/KaedeFile/Core/: Reader.hpp  Writer.cpp
Source/KaedeManager/: Collection.cpp  Collection.hpp  Manager.hpp
Source/KaedeManager/Core/: Reader.cpp  Reader.hpp  Writer.cpp  Writer.hpp
